# axum-starter

./: Cargo.toml  Dockerfile
src/: main.rs
