[package]
name = "github-app"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["json"] }
tokio = { version = "1.38.0", features = ["full"] }
serde_derive = "1.0.203"
serde = "1.0.203"
anyhow = "1.0.86"
dotenv = "0.15.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
envy = "0.4.2"